# evolving

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  build.sh
.evolving/: .gitignore  config.toml
.evolving/ledger/: king800kpr0-227c.jsonl
.github/workflows/: ci.yml
docs/: README.md  commands.md  concepts.md  design.md  measuring-drift-defense.md  migrating.md  neighbors.md  philosophy.md  preregistrations.md  usage.md
docs/superpowers/plans/: ev-0.2.0-plan1-core-loop.md
docs/superpowers/specs/: ev-0.2.0-plan1-core-loop-design.md
integrations/: README.md
integrations/agent-hooks/: ev-brief-sessionstart.sh  pre-commit  settings.snippet.json
integrations/claude-code/: README.md  ev-setup.sh
integrations/scaffold/: ev-colocate.sh
skills/ev/: SKILL.md
src/: canonical.rs  capture.rs  cmd.rs  config.rs  correct.rs  events.rs  exhaust.rs  guard.rs  hooks.rs  ledger.rs  lib.rs  lint.rs  liveness.rs  main.rs  migrate.rs  pause.rs  ratify.rs  reading.rs  receipt.rs  render.rs  runner.rs  selected.rs  setup.rs  staleness.rs  state.rs  store.rs  supersede.rs  tick.rs  verdict.rs  verify.rs
tests/: ack.rs  age_staleness.rs  brief.rs  capture.rs  cell.rs  check_collapse.rs  check_run.rs  claim.rs  cli.rs  cli_smoke.rs  close.rs  correct.rs  counter_test_exec.rs  decide_dry_run.rs  doctor.rs  dogfood_dependency_drift.rs  dogfood_gateway_m1.rs  dogfood_gateway_m2.rs  dogfood_rejected_road_tripwire.rs  dogfood_trial_window_drift.rs  drift.rs  emit_only.rs  events.rs  evidence.rs  exhaust.rs  fold.rs  from_git.rs  golden_vectors.rs  green_exit_code.rs  harvested.rs  hooks.rs  init.rs  jurisdiction.rs  ledger_envelope.rs  ledger_io.rs  line_golden.rs  list_log.rs  live_pair.rs  liveness.rs  migrate.rs  (+20 more)
tests/goldens/: line_stable.txt
