[package]
name = "ev"
version = "0.1.0"
edition = "2021"
description = "git for decisions"

[[bin]]
name = "ev"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"            # default features only — preserve_order MUST stay OFF (sorted BTreeMap)
sha2 = "0.10"
hex = "0.4"
