[package]
name = "evolving"
version = "0.1.2"
edition = "2021"
rust-version = "1.74"
description = "git for decisions — an immutable, content-addressed ledger of human-authored decisions that resurfaces when a bound check goes red"
license = "Apache-2.0"
repository = "https://github.com/wan9yu/evolving"
readme = "README.md"
keywords = ["decisions", "cli", "ledger", "provenance", "testing"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "ev"
path = "src/lib.rs"

[[bin]]
name = "ev"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"            # default features only — preserve_order MUST stay OFF (sorted BTreeMap)
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing"] }
