[package]
name = "evolving"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A closure engine for one human and their agent fleet — claims close on evidence, or not at all."
repository = "https://github.com/wan9yu/evolving"
readme = "README.md"
keywords = ["claims", "evidence", "agent", "cli", "ledger"]
exclude = [".evolving/", ".github/", ".gitattributes"]

[[bin]]
name = "ev"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
sha2 = "0.10"
fs4 = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
